# OUCC2024

./: .gitignore  CMakeLists.txt  README.md  oucc.cpp
include/: SysY.interp  SysY.tokens  TODO.md  ast_visitor.hpp  basic_block.hpp  compiler.hpp  constant.hpp  dom_tree.hpp  function.hpp  global_variable.hpp  instruction.hpp  mir.hpp  mir_gen.hpp  module.hpp  number.hpp  pass.hpp  pass_manager.hpp  preprocess.hpp  reg_alloc.hpp  register.hpp  translate.hpp  type.hpp  value.hpp
include/ir/: TODO.md  alloca_inst.hpp  argument.hpp  array_type.hpp  basic_block.hpp  basic_type.hpp  binary_operator.hpp  branch_inst.hpp  call_inst.hpp  cast_inst.hpp  cmp_inst.hpp  constant.hpp  constant_array.hpp  constant_number.hpp  constant_zero.hpp  function.hpp  get_elem_ptr_inst.hpp  global_variable.hpp  instruction.hpp  load_inst.hpp  module.hpp  phi_node.hpp  pointer_type.hpp  ret_inst.hpp  store_inst.hpp  type.hpp  use.hpp  user.hpp  value.hpp
include/mir/: TODO.md  mir.hpp  mir_gen.hpp  translate.hpp
include/model/: number.hpp
include/parser/: SysYBaseVisitor.h  SysYLexer.h  SysYLexer.interp  SysYParser.h  SysYVisitor.h  TODO.md  ast_visitor.hpp
include/pass/: TODO.md  pass.hpp  pass_manager.hpp
include/pre/: TODO.md
include/reg/: TODO.md  reg_alloc.hpp  register.hpp
include/register/: TODO.md
runtime/: README.md  antlr4-cpp-runtime-4.13.1-source.zip:Zone.Identifier
src/: TODO.md  compiler.cpp  main.cpp  preprocess.cpp
src/ir/: basic_block.cpp  constant.cpp  function.cpp  global_variable.cpp  instruction.cpp  module.cpp  type.cpp  value.cpp
src/mir/: mir.cpp  mir_gen.cpp  translate.cpp
src/parser/: SysYBaseVisitor.cpp  SysYLexer.cpp  SysYParser.cpp  SysYVisitor.cpp  ast_visitor.cpp  ast_visitor_re.cpp
src/pass/: branch_opti.cpp  pass.cpp  (+7 more)
sysy/: SysY.g4
(+6 files in other folders)
